Bug 432056: [1.8][javadoc] "Open Attached Javadoc" needs to adapt to Javadoc's new anchor format